--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<script>
+    function exportar (){
+        alert(`${h.value}\n<style>\n${c.value}\n</style>\n<script>\n${j.value}\n<\/script>`);
+    }
+</script>
 <body 
     oninput="i.srcdoc=h.value+'<style>'+c.value+
             '</style><script>'+j.value+'<\/script>'">
@@ -5,7 +10,10 @@
         textarea,iframe{width:100%;height:50%}
         body{margin:0}
         textarea{width:33.33%;font-size:18}
+        button{position:fixed;bottom: 0;background-color:deepskyblue;}
     </style>
+    <button onclick="exportar()">Export</button>
+
     <textarea placeholder=HTML id=h></textarea>
     <textarea placeholder=CSS id=c></textarea>
     <textarea placeholder=JS id=j></textarea>
